--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		<div class="background background_image background_blur"></div>
 		<div class="overlay overlay_dark">
 			<main class="project">
-				<h1 id="fit" class="project__name project__name_shadow">ProjectName</h1>
+				<h1 id="fit" class="project__name project__name_shadow">TOTAL DECOR CONSTRUCT</h1>
 
 				<ul class="project__list">
 					<li class="project__item">
