--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			<main class="project">
 				<h1 id="fit" class="project__name project__name_shadow">TOTAL DECOR CONSTRUCT</h1>
 
-				<ul class="project__list">
+				<!--<ul class="project__list">
 					<li class="project__item">
 						<a class="project__link project__link_empty">Pages</a> 
 						<ul class="project__list">
@@ -176,7 +176,7 @@
 							<li class="project__item is-checked">
 								<a href="#" class="project__link">Implemented page</a>
 							</li>
-						</ul>
+						</ul>-->
 					</li>
 					 <li class="project__item">
 						<a class="project__link project__link_empty">Blocks</a> 
