--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>TOTAL DECOR CONSTRUCT</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" href="favicon.ico">
+		<p>painting and decorating and other stuff</p>
 	</head>
 	<body>
 		<style>
